Optimization  google pagespeed

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <meta name="description" content="Luxury - тихий дом в самом центре Москвы">
-    <meta property="og:image" content="path/to/image.jpg">
+    <meta property="og:image" content="path/to/home.webp">
     <meta name="theme-color" content="#151515">
     <link rel="icon" href="img/favicon.png">
     <link rel="stylesheet" href="css/style.min.css">
     <title>Luxury - тихий дом в самом центре Москвы</title>
   </head>
   <body>
-    <header class="header" style="background-image: url(img/header-bg.jpg)" data-aos="fade">
+    <header class="header" style="background-image: url(img/header-bg.webp)" data-aos="fade">
       <div class="header__top">
         <div class="container header__container">
           <div class="header__logo">Luxury</div><a class="contact-link header__contact-link" href="tel:+88000000000">8 (800) 000 00 00</a>
@@ -58,29 +58,29 @@
           </div>
         </div>
       </div>
-      <div class="boximg location__boximg" data-aos="fade-up"><img class="location__img" src="img/map.jpg" alt="Местоположение дома Luxury"></div>
+      <div class="boximg location__boximg" data-aos="fade-up"><img class="location__img" src="img/map.webp" alt="Местоположение дома Luxury"></div>
     </section>
     <section class="style">
       <div class="style__text" data-aos="fade">
         <h2>Стиль</h2>
         <p>Главный фасад здания исполнен в неоклассическом стиле с выступающими деталями и большим количеством окон. Это четко очерченная композиция из полированного гранита с элементами рустики, крупноформатного керамогранита и декоративными элементами, выполненными на заказ.</p>
         <p>В основе интерьеров приоритетными являются эстетика, где видимая роскошь сочетается с комфортом, в нее идеально вписываются любые технические приборы и устройства.</p>
-      </div><img class="style__img" src="img/style.jpg" alt="Стиль дома" data-aos="fade-up" data-aos-anchor=".style__text">
+      </div><img class="style__img" src="img/style.webp" alt="Стиль дома" data-aos="fade-up" data-aos-anchor=".style__text">
     </section>
     <section class="comfort">
       <h2 class="comfort__title" data-aos="fade">Зона комфорта</h2>
       <div class="slider">
         <div class="slider__inner">
-          <div class="slider__item"><img class="slider__img" src="img/comfort-1.jpg" alt="Лобби">
+          <div class="slider__item"><img class="slider__img" src="img/comfort-1.webp" alt="Лобби">
             <p class="slider__desc">Путешествие в мир безупречного вкуса начинается с лобби: стены украшает покрытие из натурального камня, зеркальные декоративные панно, выполненные по авторскому дизайну.</p>
           </div>
-          <div class="slider__item"><img class="slider__img" src="img/comfort-2.jpg" alt="Фитнес зона">
+          <div class="slider__item"><img class="slider__img" src="img/comfort-2.webp" alt="Фитнес зона">
             <p class="slider__desc">В доме предусмотрена собственная фитнес зона, на первом этаже, к услугам жителей и их гостей: кафе и продуктовый магазин, аптека, химчистка, салон красоты и медицинский центр.</p>
           </div>
-          <div class="slider__item"><img class="slider__img" src="img/comfort-3.jpg" alt="Детская площадка">
+          <div class="slider__item"><img class="slider__img" src="img/comfort-3.webp" alt="Детская площадка">
             <p class="slider__desc">В северной части дома, для маленьких жителей, удачно расположилась оборудованная площадка для развлечений.</p>
           </div>
-          <div class="slider__item"><img class="slider__img" src="img/comfort-4.jpg" alt="Эко-терраса">
+          <div class="slider__item"><img class="slider__img" src="img/comfort-4.webp" alt="Эко-терраса">
             <p class="slider__desc">Открытая эко-терраса, для тех кто летом предпочитает выпить чашечку кофе, на рассвете, под первыми лучами солнца, или к полудню, решит понежиться на солнышке.</p>
           </div>
         </div><span class="slider__control slider__control_prev"></span><span class="slider__control slider__control_next"></span>
@@ -90,7 +90,7 @@
       <div class="offer__container">
         <h2 class="offer__title" data-aos="fade">Мы предлагаем</h2>
         <div class="offer__card">
-          <div class="offer__boximg" data-aos="flip-up"><img class="offer__img offer__img_l" src="img/apatments.jpg" alt="Апартаменты"></div>
+          <div class="offer__boximg" data-aos="flip-up"><img class="offer__img offer__img_l" src="img/apatments.webp" alt="Апартаменты"></div>
           <div class="offer__info offer__anchor_1">
             <h3 data-aos="fade" data-aos-anchor=".offer__anchor_1">Апартаменты</h3>
             <p class="offer__desc" data-aos="fade-up">Со второго по шестой этаж гармонично спланированы апартаменты различной площади от 35 до 80 м2, жителям каждого из которых гарантирована максимальная приватность и комфорт.</p>
@@ -98,7 +98,7 @@
           </div>
         </div>
         <div class="offer__card offer__card_last">
-          <div class="offer__boximg" data-aos="flip-up"><img class="offer__img offer__img_r" src="img/penthouses.jpg" alt="Пентхаусы"></div>
+          <div class="offer__boximg" data-aos="flip-up"><img class="offer__img offer__img_r" src="img/penthouses.webp" alt="Пентхаусы"></div>
           <div class="offer__info offer__anchor_2">
             <h3 data-aos="fade" data-aos-anchor=".offer__anchor_2">Пентхаусы</h3>
             <p class="offer__desc" data-aos="fade-up">На седьмом этаже Дома предусмотрено несколько пентхаусов. В распоряжении их жителей: высокие потолки 5,5 метров, свободная планировка для создания стильного, торжественного интерьера.</p>
