--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="contacts__time">с 9-00 до 18-00 без выходных</div><a class="contact-link contacts__phone" href="tel:+88000000000">8 (800) 000 00 00</a><a class="contact-link contacts__email" href="mailto:e-mail@luxury.ru">e-mail@luxury.ru</a>
           </div>
         </div>
-        <div class="copyright"><span class="copyright__dev">design & development <a class="copyright__author" href="#">S.Vedernikov</a></span><span class="copyright__year">&copy; 2019</span></div>
+        <div class="copyright"><span class="copyright__dev">design & development <a class="copyright__author" href="https://sv-59.ru/">S.Vedernikov</a></span><span class="copyright__year">&copy; 2019</span></div>
       </div>
     </footer>
     <div class="popup">
